# lib/db/src/schema/index.ts
@@ -7,6 +7,9 @@ export * from "./files";
 export * from "./finance";
 export * from "./outbox";
 export * from "./integrations";
+export * from "./templates";
+export * from "./broadcasts";
+export * from "./automations";
 export * from "./contacts";
 export * from "./conversations";
 export * from "./tickets";
